--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -8,7 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and Deploy Vue
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16
     - id: Build-Deploy-Vue
       uses: thefrustrateddev/vue-deploy-github-pages@v1.0.0
       with:
