--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -15,7 +15,7 @@ jobs:
     - id: Build-Deploy-Vue
       uses: thefrustrateddev/vue-deploy-github-pages@v1.0.0
       with:
-        username: '{{dreusel}}'
-        reponame: '{{xtds-dashboard}}'
+        username: 'dreusel'
+        reponame: 'xtds-dashboard'
         token: ${{ secrets.GITHUB_TOKEN }}
         
