--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -3,8 +3,22 @@ on:
   push:
     branches:
     - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build_deploy_vue:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     name: Build and Deploy Vue
     steps:
@@ -13,7 +27,7 @@ jobs:
       with:
         node-version: 16
     - id: Build-Deploy-Vue
-      uses: thefrustrateddev/vue-deploy-github-pages@v1.0.0
+      uses: dreusel/vue-deploy-github-pages@latest
       with:
         username: 'dreusel'
         reponame: 'xtds-dashboard'
